[B]3.0.7[/B]
- changed: removed one of the IMDb outline catch

[B]3.0.6[/B]
- fixed: try to limit world wide English to over ride proper USA title

[B]3.0.5[/B]
- fixed: IMDb cast and outline following IMDb layout changes

[B]3.0.4[/B]
- fixed: IMDb plot after IMDb layout changes

[B]3.0.3[/B]
- fixed: World-wide English title won't scraped correctly

[B]3.0.2[/B]
- Use TV certification in the absence of MPAA ones

[B]3.0.1[/B]
- fixed: USA Title won't scraped correctly under some circumstances, plot outline quirks, IMDB Posters

[B]3.0.0[/B]
- fixed: IMDb plot outline under some circumstances

[B]2.9.9[/B]
- fixed: Thumb for IMDb cast

[B]2.9.8[/B]
- fixed: IMDb outline for some movies

[B]2.9.7[/B]
- changed: attempt to scrape generic local title from IMDb if multiple are available

[B]2.9.6[/B]
- fixed: movie title issues after IMDb layout changes

[B]2.9.5[/B]
- fixed: IMDb Full credits after IMDb layout changes

[B]2.9.4[/B]
- fixed: USA certification rating due to IMDb changes

[B]2.9.3[/B]
- fixed: always get USA rating regardless of the country set

[B]2.9.2[/B]
- changed: simplify ratings code

[B]2.9.1[/B]
- changed: improved USA rating detection

[B]2.9.0[/B]
- added: multiple ratings and uniqueid support (requires Kodi v17)
- fixed: another attempt to fix IMDb outline

[B]2.8.8[/B]
- fixed: potential issue with IMDb outline (thanks scudlee)

[B]2.8.7[/B]
- fixed: IMDb countries

[B]2.8.6[/B]
- fixed: metacritic rating in further scenarios

[B]2.8.5[/B]
- fixed: metacritic rating

[B]2.8.4[/B]
- update author name

[B]2.8.3[/B]
- fixed: Keep Original Title for foreign movies

[B]2.8.2[/B]
- fixed: trying to fix IMDb outline

[B]2.8.1[/B]
- fixed: potential PCRE error due to non-clean regexp

[B]2.8.0[/B]
- fixed: won't scrape IMDb TOP250

[B]2.7.8[/B]
- fixed: add xml header

[B]2.7.7[/B]
- fixed: MetaCritic Score for 100/100 films

[B]2.7.6[/B]
- fixed: IMDb studio/director/writer after layout change

[B]2.7.5[/B]
- fixed: OutlineToPlot function